Úvod+ukázka citace

--- a/protocol/dokumentace.bib
+++ b/protocol/dokumentace.bib
@@ -18,11 +18,10 @@ address = "New York",
 isbn = {0-7668-1362-2}
 }
 
-@Article{Brabec,
-author = {Stanislav BRABEC},
-journal = {TeX pro ka¾dého - struèný úvod do typografie},
-url = {http://www.root.cz/clanky/strucny-uvod-do-typografie/},
-note = {[online]. 2002 [cit. 2014-04-22]}
+@Article{wikipediaHubble,
+journal = {Hubbleùv vesmírný dalekohled},
+url = {http://cs.wikipedia.org/wiki/Hubble\%C5\%AFv\_vesm\%C3\%ADrn\%C3\%BD\_dalekohled},
+note = {[online]. 2015 [cit. 2015-04-02]}
 }
 
 @Article{Kerslager,
