--- a/protocol/dokumentace.tex
+++ b/protocol/dokumentace.tex
@@ -4,7 +4,6 @@
 \usepackage[czech]{babel}
 \usepackage[latin2]{inputenc}
 \usepackage{times}
-\usepackage{url}
 \begin{document}
 \begin{titlepage}
 \begin{center}
@@ -12,14 +11,14 @@
 \textsc{Vysoké uèení technické v~Brnì\\ \huge Fakulta informaèních technologií}\\
 \vspace{\stretch{0.382}}
 \Huge Fyzikální optika \\ 
-\LARGE Hubblùv a Webbùv teleskop - popis optických systémù  \\
+\LARGE Hubbleùv a Webbùv teleskop - popis optických systémù  \\
 \vspace{\stretch{0.109}}
 semestrální projekt \\
 \vspace{\stretch{0.309}}
 \today
 \vspace{\stretch{0.209}}
 \end{center}
-\large Zdenìk Biberle - xbiber00@stud.fit.vutbr.cz \\ Josef Øídký - xridky00@stud.fit.vutbr.cz
+\Large Zdenìk Biberle - xbiber00@stud.fit.vutbr.cz \\ Josef Øídký - xridky00@stud.fit.vutbr.cz
 \end{titlepage}
 \newpage
 
@@ -28,41 +27,38 @@ semestrální projekt \\
 \newpage
 
 \Large\noindent{\bf Abstrakt}\\
-\normalsize\noindent Text abstraktu.\\
+\normalsize\noindent\\ Tento projekt popisuje historii, vlastnosti a~popis optických soustav ji¾ pou¾ívaného Hubbleova teleskopu a~plánovaného teleskopu Jamese Webba. V~první èásti je ètenáø seznámen s~Hubbelovým teleskopem a~v~druhé èásti s~teleskopem Jamese Webba. Souèástí tohoto projektu je i~animace popisující optické soustavy obou vesmírných teleskopù.\\
 \vspace{\stretch{0.8}}\\
 \Large\noindent {\bf Klíèová slova}\\
-\normalsize\noindent teleskop, optické systémy, èoèky, vesmír atp.\\
+\normalsize\noindent teleskop, optické systémy, èoèky, vesmír, Hubble, James Webb, NASA\\
 \vspace{\stretch{0.2}}
 \newpage
 
 
 \section{Úvod}
-Smí¹ená sazba má o~nìco volnìj¹í pravidla, jak hladká sazba. 
-Nejèastìji se klasická hladká sazba doplòuje o~dal¹í øezy písma pro zvýraznìní dùle¾itých pojmù.
-Existuje :
+Èlovìk u¾ od pradávna vzhlí¾el ke hvìzdám a~vesmírným tìlesùm ve snaze je zdokumentovat, zaznamenat jejich pohyb èi zajistit si jejich pøíznivé naklonìní. V~posledních letech se v¹ak lidstvu díky technologickému pokroku podaøilo udìlat obrovský skok vpøed v~pozorování a~dokumentování na¹í galaxie a~vesmíru kolem nás. Díky rozmachu vesmírných programù se podaøilo umístit pøímo do kosmu speciální du¾ice a~teleskopy díky nim¾ jsme opìt o~krok blí¾ k poznání tajù vesmíru. V~tomto semestrálním projektu se zabýváme historií, vlastnostmi a~popisem optických soustav dvou vesmírných teleskopù. Prvním teleskopem je Hubbleùv teleskop, který je na obì¾né dráze v~provozu ji¾ 25 let a~pomohl nám objasnit a~objevit mnoho záhad vesmíru. Druhým popsaným teleskopem je teleskop Jamese Webba, který je¹tì ve vesmíru není, av¹ak ji¾ existuje jeho model ve skuteèné velikosti. Konstrukce finálního teleskopu je ji¾ v~plném proudu, aby mohl v~roce 2018 zapoèít svoji misi. 
 
-\begin{quotation}
-\textsc{ Èím více druhù, øezù, veli\-kostí, barev písma a~jiných efektù pou¾ijeme, tím profesionálnìji bude dokument vypadat. Ètenáø tím bude v¾dy nad¹en!}
-\end{quotation}
+\cite{wikipediaHubble}
 
-Tímto pravidlem se \underline{nikdy} nesmíte øídit. Pøíli¹ èasté zvýrazòování textových elementù~a~zmìny \huge{V}\LARGE{E}\Large{L}\large{I}\normalsize{K}\small{O}\footnotesize{S}\scriptsize{T}\tiny{I} \normalsize písma \Large jsou \LARGE známkou \huge{\bf amatérismu }\normalsize  autora a~pùsobí {\bf\emph{velmi}} \emph{ru¹ivì.} Dobøe navr¾ený dokument nemá více ne¾ 4 øezy èi druhy písma.
-{\tt Dobøe navr¾ený dokument je decentní­, ne chaotický.}
+\section{Hubbleùv vesmírný dalekohled}
 
-Dùle¾itým znakem \cite{Graham} správnì vysázeného dokumentu je konzistentní pou¾í­vání­ rùzných druhù zvýraznìní­. To napøí­klad mù¾e znamenat, ¾e {\bf tuèný øez} pí­sma bude vyhrazen pouze pro klíèová slova, {\sl sklonìný øez} pouze pro doposud neznámé pojmy a~nebude se to míchat. Sklonìný øez nepùsobí­ tak ru¹ivì a~pou¾ívá se èastìji. V~\LaTeX u jej sází­me radìji pøí­kazem 
-\verb|\emph{text}| ne¾ \verb|\textit{text}|.
+\subsection{Podsekce 1}
+\subsection{Podsekce 2}
+\subsection{Podsekce 3}
 
-Smí¹ená sazba se nejèastìji pou¾ívá pro sazbu vìdeckých èlánkù a~technických zpráv. U~del¹í­ch dokumentù vìdeckého èi technického charakteru je zvykem upozornit ètenáøe na význam rùzných typù zvýraznìní­ v~úvodní­ kapitole.
 
-\section{Èeské odli¹nosti}
+\section{Vesmírný teleskop Jamese Webba}
 
-Èeská sazba se oproti okolní­mu svìtu v~nìkterých aspektech mí­rnì li¹í­. Jednou z~odli¹ností je sazba uvozovek. Uvozovky se v~èe¹tinì pou¾í­vají­ pøevá¾nì pro zobrazení­ pøí­mé øeèi. V~men¹í­ míøe se pou¾í­vají­ také pro zvýraznìní­ pøezdí­vek a~ironie. V~èe¹tinì se pou¾í\-­vá tento typ uvozovek namísto anglických ``uvozovek''.
+\subsection{Podsekce 1}
+\subsection{Podsekce 2}
+\subsection{Podsekce 3}
 
-Ve smí¹ené sazbì se øez uvozovek øí­dí­ øezem první­ho uvozovaného slova. Pokud je uvozována celá vìta, sází­ se koncová teèka pøed uvozovku, pokud se uvozuje slovo nebo èást vìty, sází­ se teèka za uvozovku.
+\section{Závìr}
 
-Druhou odli¹ností je pravidlo pro sázení­ koncù øádkù. V~èeské sazbì by øádek nemìl konèit osamocenou jednopí­smennou pøedlo¾kou nebo spojkou (spojkou a~konèit mù¾e pøi sazbì do 25 liter). Abychom \LaTeX u zabránili v~sázení­ osamocených pøedlo¾ek, vkládáme mezi pøedlo¾ku a~slovo nezlomitelnou mezeru znakem\, \textasciitilde\, (vlnka, tilda). Pro automatické do\-plnìní vlnek slou¾í­ volnì ¹iøitelný program \emph{vlna} od pana Ol¹áka\footnote{Viz ftp://math.feld.cvut.cz/pub/olsak/vlna/.}.
 \newpage
 
 \bibliographystyle{czechiso}
-\def\refname{Pouitá literatura}
+\def\refname{Pou¾itá literatura}
 \bibliography{dokumentace}
+
 \end{document}
