Prvni informace o JWST

--- a/protocol/dokumentace.tex
+++ b/protocol/dokumentace.tex
@@ -49,8 +49,11 @@ semestrální projekt \\
 
 \section{Vesmírný teleskop Jamese Webba}
 
-\subsection{Podsekce 1}
-\subsection{Podsekce 2}
+Druhým teleskopem, který v~tomto projektu pøedstavíme, je vesmírný teleskop Jamese Webba. Vesmírný teleskop Jamese Webba (anglicky James Webb Space Telescope, zkrácenì JWST) je plánovaná vesmírná observatoø, která by mìla být vypu¹tìna v~øíjnu 2018. JWST by mìl nahradit dosluhující Hubbleùv teleskop. V jednotlivých podkapitolách budeme postupnì rozebírat jeho zvlá¹tnosti a~parametry. V první øadì se ale zamìøíme na jeho historii a~pojmenování.
+
+\subsection{Poèátky vývoje}
+\subsubsection{James Webb}
+\subsection{Popis konstrukce}
 \subsection{Podsekce 3}
 
 \section{Závìr}
