Uvodni informace o JWST

--- a/protocol/dokumentace.tex
+++ b/protocol/dokumentace.tex
@@ -49,10 +49,17 @@ semestrální projekt \\
 
 \section{Vesmírný teleskop Jamese Webba}
 
-Druhým teleskopem, který v~tomto projektu pøedstavíme, je vesmírný teleskop Jamese Webba. Vesmírný teleskop Jamese Webba (anglicky James Webb Space Telescope, zkrácenì JWST) je plánovaná vesmírná observatoø, která by mìla být vypu¹tìna v~øíjnu 2018. JWST by mìl nahradit dosluhující Hubbleùv teleskop. V jednotlivých podkapitolách budeme postupnì rozebírat jeho zvlá¹tnosti a~parametry. V první øadì se ale zamìøíme na jeho historii a~pojmenování.
+Druhým teleskopem, který v~tomto projektu pøedstavíme, je vesmírný teleskop Jamese Webba. Vesmírný teleskop Jamese Webba (anglicky James Webb Space Telescope, dále v textu jen JWST) je plánovaná vesmírná observatoø, která by mìla být vypu¹tìna v~øíjnu 2018. JWST by mìl nahradit dosluhující Hubbleùv teleskop. V jednotlivých podkapitolách budeme postupnì rozebírat jeho zvlá¹tnosti a~parametry. V první øadì se ale zamìøíme na jeho historii a~pojmenování.
 
-\subsection{Poèátky vývoje}
-\subsubsection{James Webb}
+\subsection{Pøedstavení teleskopu}
+JWST je plánovaná velká vesmírná observatoø optimalizovaná pro pøíjem infraèerveného vlnového záøení, pomocí kterého budou doplnìny a~prohloubeny obejvy, které byly uskuteènìny Hubbleovým teleskopem.
+Díky vìt¹í vlnové délce bude JWST schopen pozorovat formování prvních galaxií pøi utváøení vesmíru a dále bude schopen pozorovat formování galaxií, které jsou ukryré za mraèny vesmírného prachu.
+
+Pùvodní název JSWT byl Vesmírný teleskop nové generace (anglicky Next Generation Space Telescope, zkrácenì NGST). Pøívlastek 'nové generace' získal proto, ¾e JWST bude stavìt a pokraèovat ve vìdním prùzkumu, který zapoèal Hubbleùv vesmírný teleskop. Obìvy, které byly uèinìny Hubbleovým teleskopem, ale i ostatními teleskopy, zapøíèinily revoluci v astronomii a vyvstaly nové otázky, na jejich¾ zodpovìzení bylo zapotøebí nových, odli¹ných a výkonìj¹¹ích teleskopù. 
+JWST je také teleskopem nové generace i~po stránce technologické a~to díky pou¾ití nových technologií jako napøíklad odlehèeného, rozvinovacího primárního zrcadla, které bude urèovat smìr pro budoucí mise.
+Vesmírný teleskop nové generace byl 10. záøí 2002 pojmenován po Jamesi E. Webbovi.
+ 
+\subsubsection{James E. Webb}
 \subsection{Popis konstrukce}
 \subsection{Podsekce 3}
 
