Převod do UTF-8

--- a/protocol/dokumentace.bib
+++ b/protocol/dokumentace.bib
@@ -1,6 +1,6 @@
 @Book{Saltz,
 author = {Ina SALTZ},
-title = {Základy typografie: 100 principù pro práci s písmem},
+title = {ZÃ¡klady typografie: 100 principÅ¯ pro prÃ¡ci s pÃ­smem},
 publisher = {Slovart},
 year = {2010},
 note = "208\,s.",
@@ -19,21 +19,28 @@ isbn = {0-7668-1362-2}
 }
 
 @Article{wikipediaHubble,
-journal = {Hubbleùv vesmírnı dalekohled},
+journal = {HubbleÅ¯v vesmÃ­rnÃ½ dalekohled},
 url = {http://cs.wikipedia.org/wiki/Hubble\%C5\%AFv\_vesm\%C3\%ADrn\%C3\%BD\_dalekohled},
 note = {[online]. 2015 [cit. 2015-04-02]}
 }
 
+@Article{nasaHubbleChronology
+journal = {A Chronology of the Hubble Space Telescope},
+url = {http://history.nasa.gov/hubble/chron.html},
+note = {[online]. 2015 [cit. 2015-04-03]}
+}
+
+
 @Article{Kerslager,
-author = {Milan KER©LÁGER},
-journal = {Typografická pravidla},
+author = {Milan KERÅ LÃGER},
+journal = {TypografickÃ¡ pravidla},
 url = {http://www.pslib.cz/ke/Typografick%C3%A1_pravidla},
 note = {[online]. 2013 [cit. 2014-04-22]},
 }
 
 @Article{Bures,
-author = {Jiøí BURE©},
-journal = {Typografické jednotky},
+author = {JiÅ™Ã­ BUREÅ },
+journal = {TypografickÃ© jednotky},
 url = {http://www.converter.cz/prevody/typografie.htm},
 note = {[online]. 2002 [cit. 2014-04-22]},
 }
@@ -47,8 +54,8 @@ issn = {0322-9068}
 }
 
 @Article{Typografiac1,
-author = {Jitka BÖHMOVÁ},
-title = {®eny v tiskárnách a médiích -- Radana Lencová, autorka ¹kolního psacího písma Comenia Script},
+author = {Jitka BÃ–HMOVÃ},
+title = {Å½eny v tiskÃ¡rnÃ¡ch a mÃ©diÃ­ch -- Radana LencovÃ¡, autorka Å¡kolnÃ­ho psacÃ­ho pÃ­sma Comenia Script},
 journal = {Typografia},
 year = {2013},
 volume = {116},
@@ -58,8 +65,8 @@ issn = {0322-9068}
 }
 
 @Article{Typografiac2,
-author = {Jitka BÖHMOVÁ},
-title = {Vısledky soutì¾e Kalendáø roku 2013},
+author = {Jitka BÃ–HMOVÃ},
+title = {VÃ½sledky soutÄ›Å¾e KalendÃ¡Å™ roku 2013},
 journal = {Typografia},
 year = {2013},
 volume = {116},
@@ -69,15 +76,15 @@ issn = {0322-9068}
 }
 
 @MastersThesis{Greplova,
-author = {Kristına GREPLOVÁ},
-title = {Experimentální typografie -- zkoumání anatomie písma},
-school = {Brno: Vysoké uèení technické. Fakulta vıtvarnıch umìní},
+author = {KristÃ½na GREPLOVÃ},
+title = {ExperimentÃ¡lnÃ­ typografie -- zkoumÃ¡nÃ­ anatomie pÃ­sma},
+school = {Brno: VysokÃ© uÄenÃ­ technickÃ©. Fakulta vÃ½tvarnÃ½ch umÄ›nÃ­},
 year = {2009}
 }
 
 @MastersThesis{Fabry,
-author = {Tomá¹ FÁBRY},
-title = {Sazba sekvenèních diagramù v prostøedí LaTeX},
+author = {TomÃ¡Å¡ FÃBRY},
+title = {Sazba sekvenÄnÃ­ch diagramÅ¯ v prostÅ™edÃ­ LaTeX},
 school = {Brno: Masarykova univerzita. Fakulta informatiky},
 year = {2011}
 }
