--- a/protocol/dokumentace.tex
+++ b/protocol/dokumentace.tex
@@ -8,17 +8,17 @@
 \begin{titlepage}
 \begin{center}
 \Huge
-\textsc{Vysoké uèení technické v~Brnì\\ \huge Fakulta informaèních technologií}\\
+\textsc{VysokÃ© uÄenÃ­ technickÃ© v~BrnÄ›\\ \huge Fakulta informaÄnÃ­ch technologiÃ­}\\
 \vspace{\stretch{0.382}}
-\Huge Fyzikální optika \\ 
-\LARGE Hubbleùv a Webbùv teleskop - popis optickıch systémù  \\
+\Huge FyzikÃ¡lnÃ­ optika \\ 
+\LARGE HubbleÅ¯v a WebbÅ¯v teleskop - popis optickÃ½ch systÃ©mÅ¯  \\
 \vspace{\stretch{0.109}}
-semestrální projekt \\
+semestrÃ¡lnÃ­ projekt \\
 \vspace{\stretch{0.309}}
 \today
 \vspace{\stretch{0.209}}
 \end{center}
-\Large Zdenìk Biberle - xbiber00@stud.fit.vutbr.cz \\ Josef Øídkı - xridky00@stud.fit.vutbr.cz
+\Large ZdenÄ›k Biberle - xbiber00@stud.fit.vutbr.cz \\ Josef Å˜Ã­dkÃ½ - xridky00@stud.fit.vutbr.cz
 \end{titlepage}
 \newpage
 
@@ -27,48 +27,48 @@ semestrální projekt \\
 \newpage
 
 \Large\noindent{\bf Abstrakt}\\
-\normalsize\noindent\\ Tento projekt popisuje historii, vlastnosti a~popis optickıch soustav ji¾ pou¾ívaného Hubbleova teleskopu a~plánovaného teleskopu Jamese Webba. V~první èásti je ètenáø seznámen s~Hubbelovım teleskopem a~v~druhé èásti s~teleskopem Jamese Webba. Souèástí tohoto projektu je i~animace popisující optické soustavy obou vesmírnıch teleskopù.\\
+\normalsize\noindent\\ Tento projekt popisuje historii, vlastnosti a~popis optickÃ½ch soustav jiÅ¾ pouÅ¾Ã­vanÃ©ho Hubbleova teleskopu a~plÃ¡novanÃ©ho teleskopu Jamese Webba. V~prvnÃ­ ÄÃ¡sti je ÄtenÃ¡Å™ seznÃ¡men s~HubbelovÃ½m teleskopem a~v~druhÃ© ÄÃ¡sti s~teleskopem Jamese Webba. SouÄÃ¡stÃ­ tohoto projektu je i~animace popisujÃ­cÃ­ optickÃ© soustavy obou vesmÃ­rnÃ½ch teleskopÅ¯.\\
 \vspace{\stretch{0.8}}\\
-\Large\noindent {\bf Klíèová slova}\\
-\normalsize\noindent teleskop, optické systémy, èoèky, vesmír, Hubble, James Webb, NASA\\
+\Large\noindent {\bf KlÃ­ÄovÃ¡ slova}\\
+\normalsize\noindent teleskop, optickÃ© systÃ©my, ÄoÄky, vesmÃ­r, Hubble, James Webb, NASA\\
 \vspace{\stretch{0.2}}
 \newpage
 
 
-\section{Úvod}
-Èlovìk u¾ od pradávna vzhlí¾el ke hvìzdám a~vesmírnım tìlesùm ve snaze je zdokumentovat, zaznamenat jejich pohyb èi zajistit si jejich pøíznivé naklonìní. V~posledních letech se v¹ak lidstvu díky technologickému pokroku podaøilo udìlat obrovskı skok vpøed v~pozorování a~dokumentování na¹í galaxie a~vesmíru kolem nás. Díky rozmachu vesmírnıch programù se podaøilo umístit pøímo do kosmu speciální du¾ice a~teleskopy díky nim¾ jsme opìt o~krok blí¾ k poznání tajù vesmíru. V~tomto semestrálním projektu se zabıváme historií, vlastnostmi a~popisem optickıch soustav dvou vesmírnıch teleskopù. Prvním teleskopem je Hubbleùv teleskop, kterı je na obì¾né dráze v~provozu ji¾ 25 let a~pomohl nám objasnit a~objevit mnoho záhad vesmíru. Druhım popsanım teleskopem je teleskop Jamese Webba, kterı je¹tì ve vesmíru není, av¹ak ji¾ existuje jeho model ve skuteèné velikosti. Konstrukce finálního teleskopu je ji¾ v~plném proudu, aby mohl v~roce 2018 zapoèít svoji misi. 
+\section{Ãšvod}
+ÄŒlovÄ›k uÅ¾ od pradÃ¡vna vzhlÃ­Å¾el ke hvÄ›zdÃ¡m a~vesmÃ­rnÃ½m tÄ›lesÅ¯m ve snaze je zdokumentovat, zaznamenat jejich pohyb Äi zajistit si jejich pÅ™Ã­znivÃ© naklonÄ›nÃ­. V~poslednÃ­ch letech se vÅ¡ak lidstvu dÃ­ky technologickÃ©mu pokroku podaÅ™ilo udÄ›lat obrovskÃ½ skok vpÅ™ed v~pozorovÃ¡nÃ­ a~dokumentovÃ¡nÃ­ naÅ¡Ã­ galaxie a~vesmÃ­ru kolem nÃ¡s. DÃ­ky rozmachu vesmÃ­rnÃ½ch programÅ¯ se podaÅ™ilo umÃ­stit pÅ™Ã­mo do kosmu speciÃ¡lnÃ­ duÅ¾ice a~teleskopy dÃ­ky nimÅ¾ jsme opÄ›t o~krok blÃ­Å¾ k poznÃ¡nÃ­ tajÅ¯ vesmÃ­ru. V~tomto semestrÃ¡lnÃ­m projektu se zabÃ½vÃ¡me historiÃ­, vlastnostmi a~popisem optickÃ½ch soustav dvou vesmÃ­rnÃ½ch teleskopÅ¯. PrvnÃ­m teleskopem je HubbleÅ¯v teleskop, kterÃ½ je na obÄ›Å¾nÃ© drÃ¡ze v~provozu jiÅ¾ 25 let a~pomohl nÃ¡m objasnit a~objevit mnoho zÃ¡had vesmÃ­ru. DruhÃ½m popsanÃ½m teleskopem je teleskop Jamese Webba, kterÃ½ jeÅ¡tÄ› ve vesmÃ­ru nenÃ­, avÅ¡ak jiÅ¾ existuje jeho model ve skuteÄnÃ© velikosti. Konstrukce finÃ¡lnÃ­ho teleskopu je jiÅ¾ v~plnÃ©m proudu, aby mohl v~roce 2018 zapoÄÃ­t svoji misi. 
 
 \cite{wikipediaHubble}
 
-\section{Hubbleùv vesmírnı dalekohled}
+\section{HubbleÅ¯v vesmÃ­rnÃ½ dalekohled}
+HubbleÅ¯v vesmÃ­rnÃ½ teleskop (znÃ¡mÃ½ takÃ© pod svou zkratkou HST, Äi pouze jako Hubble) je ve
+\subsection{Historie}
+\subsection{Popis konstrukce}
+\subsection{OptickÃ½ systÃ©m}
 
-\subsection{Podsekce 1}
-\subsection{Podsekce 2}
-\subsection{Podsekce 3}
 
+\section{VesmÃ­rnÃ½ teleskop Jamese Webba}
 
-\section{Vesmírnı teleskop Jamese Webba}
+DruhÃ½m teleskopem, kterÃ½ v~tomto projektu pÅ™edstavÃ­me, je vesmÃ­rnÃ½ teleskop Jamese Webba. VesmÃ­rnÃ½ teleskop Jamese Webba (anglicky James Webb Space Telescope, dÃ¡le v textu jen JWST) je plÃ¡novanÃ¡ vesmÃ­rnÃ¡ observatoÅ™, kterÃ¡ by mÄ›la bÃ½t vypuÅ¡tÄ›na v~Å™Ã­jnu 2018. JWST by mÄ›l nahradit dosluhujÃ­cÃ­ HubbleÅ¯v teleskop. V jednotlivÃ½ch podkapitolÃ¡ch budeme postupnÄ› rozebÃ­rat jeho zvlÃ¡Å¡tnosti a~parametry. V prvnÃ­ Å™adÄ› se ale zamÄ›Å™Ã­me na jeho historii a~pojmenovÃ¡nÃ­.
 
-Druhım teleskopem, kterı v~tomto projektu pøedstavíme, je vesmírnı teleskop Jamese Webba. Vesmírnı teleskop Jamese Webba (anglicky James Webb Space Telescope, dále v textu jen JWST) je plánovaná vesmírná observatoø, která by mìla bıt vypu¹tìna v~øíjnu 2018. JWST by mìl nahradit dosluhující Hubbleùv teleskop. V jednotlivıch podkapitolách budeme postupnì rozebírat jeho zvlá¹tnosti a~parametry. V první øadì se ale zamìøíme na jeho historii a~pojmenování.
+\subsection{PÅ™edstavenÃ­ teleskopu}
+JWST je plÃ¡novanÃ¡ velkÃ¡ vesmÃ­rnÃ¡ observatoÅ™ optimalizovanÃ¡ pro pÅ™Ã­jem infraÄervenÃ©ho vlnovÃ©ho zÃ¡Å™enÃ­, pomocÃ­ kterÃ©ho budou doplnÄ›ny a~prohloubeny obejvy, kterÃ© byly uskuteÄnÄ›ny HubbleovÃ½m teleskopem.
+DÃ­ky vÄ›tÅ¡Ã­ vlnovÃ© dÃ©lce bude JWST schopen pozorovat formovÃ¡nÃ­ prvnÃ­ch galaxiÃ­ pÅ™i utvÃ¡Å™enÃ­ vesmÃ­ru a dÃ¡le bude schopen pozorovat formovÃ¡nÃ­ galaxiÃ­, kterÃ© jsou ukryrÃ© za mraÄny vesmÃ­rnÃ©ho prachu.
 
-\subsection{Pøedstavení teleskopu}
-JWST je plánovaná velká vesmírná observatoø optimalizovaná pro pøíjem infraèerveného vlnového záøení, pomocí kterého budou doplnìny a~prohloubeny obejvy, které byly uskuteènìny Hubbleovım teleskopem.
-Díky vìt¹í vlnové délce bude JWST schopen pozorovat formování prvních galaxií pøi utváøení vesmíru a dále bude schopen pozorovat formování galaxií, které jsou ukryré za mraèny vesmírného prachu.
-
-Pùvodní název JSWT byl Vesmírnı teleskop nové generace (anglicky Next Generation Space Telescope, zkrácenì NGST). Pøívlastek 'nové generace' získal proto, ¾e JWST bude stavìt a pokraèovat ve vìdním prùzkumu, kterı zapoèal Hubbleùv vesmírnı teleskop. Obìvy, které byly uèinìny Hubbleovım teleskopem, ale i ostatními teleskopy, zapøíèinily revoluci v astronomii a vyvstaly nové otázky, na jejich¾ zodpovìzení bylo zapotøebí novıch, odli¹nıch a vıkonìj¹¹ích teleskopù. 
-JWST je také teleskopem nové generace i~po stránce technologické a~to díky pou¾ití novıch technologií jako napøíklad odlehèeného, rozvinovacího primárního zrcadla, které bude urèovat smìr pro budoucí mise.
-Vesmírnı teleskop nové generace byl 10. záøí 2002 pojmenován po Jamesi E. Webbovi.
+PÅ¯vodnÃ­ nÃ¡zev JSWT byl VesmÃ­rnÃ½ teleskop novÃ© generace (anglicky Next Generation Space Telescope, zkrÃ¡cenÄ› NGST). PÅ™Ã­vlastek 'novÃ© generace' zÃ­skal proto, Å¾e JWST bude stavÄ›t a pokraÄovat ve vÄ›dnÃ­m prÅ¯zkumu, kterÃ½ zapoÄal HubbleÅ¯v vesmÃ­rnÃ½ teleskop. ObÄ›vy, kterÃ© byly uÄinÄ›ny HubbleovÃ½m teleskopem, ale i ostatnÃ­mi teleskopy, zapÅ™Ã­Äinily revoluci v astronomii a vyvstaly novÃ© otÃ¡zky, na jejichÅ¾ zodpovÄ›zenÃ­ bylo zapotÅ™ebÃ­ novÃ½ch, odliÅ¡nÃ½ch a vÃ½konÄ›jÅ¡Å¡Ã­ch teleskopÅ¯. 
+JWST je takÃ© teleskopem novÃ© generace i~po strÃ¡nce technologickÃ© a~to dÃ­ky pouÅ¾itÃ­ novÃ½ch technologiÃ­ jako napÅ™Ã­klad odlehÄenÃ©ho, rozvinovacÃ­ho primÃ¡rnÃ­ho zrcadla, kterÃ© bude urÄovat smÄ›r pro budoucÃ­ mise.
+VesmÃ­rnÃ½ teleskop novÃ© generace byl 10. zÃ¡Å™Ã­ 2002 pojmenovÃ¡n po Jamesi E. Webbovi.
  
 \subsubsection{James E. Webb}
 \subsection{Popis konstrukce}
 \subsection{Podsekce 3}
 
-\section{Závìr}
+\section{ZÃ¡vÄ›r}
 
 \newpage
 
 \bibliographystyle{czechiso}
-\def\refname{Pou¾itá literatura}
+\def\refname{PouÅ¾itÃ¡ literatura}
 \bibliography{dokumentace}
 
 \end{document}
