Přeskládání bibliografie a změna inputenc v návaznosti na předchozí commit

--- a/protocol/dokumentace.bib
+++ b/protocol/dokumentace.bib
@@ -1,3 +1,26 @@
+@Article{wikipediaHubble,
+	journal = {Hubbleův vesmírný dalekohled},
+	url = {http://cs.wikipedia.org/wiki/Hubble\%C5\%AFv\_vesm\%C3\%ADrn\%C3\%BD\_dalekohled},
+	note = {[online]. 2015 [cit. 2015-04-02]}
+}
+
+@Article{nasaHubbleChronology,
+	journal = {A Chronology of the Hubble Space Telescope},
+	url = {http://history.nasa.gov/hubble/chron.html},
+	note = {[online]. 2015 [cit. 2015-04-03]}
+}
+
+@Article{cbsHubbleFinalService,
+	author = {William HARWOOD},
+	journal = {Four years after final service call, Hubble Space Telescope going strong},
+	url = {http://www.cbsnews.com/network/news/space/home/spacenews/files/1ae7cac0d167055e41e1f0da7b0ac6a3-588.html},
+	note = {[online]. 2015 [cit. 2015-04-03]}
+}
+
+
+
+
+
 @Book{Saltz,
 author = {Ina SALTZ},
 title = {Základy typografie: 100 principů pro práci s písmem},
@@ -17,19 +40,6 @@ note = "280\,s.",
 address = "New York",
 isbn = {0-7668-1362-2}
 }
-
-@Article{wikipediaHubble,
-journal = {Hubbleův vesmírný dalekohled},
-url = {http://cs.wikipedia.org/wiki/Hubble\%C5\%AFv\_vesm\%C3\%ADrn\%C3\%BD\_dalekohled},
-note = {[online]. 2015 [cit. 2015-04-02]}
-}
-
-@Article{nasaHubbleChronology
-journal = {A Chronology of the Hubble Space Telescope},
-url = {http://history.nasa.gov/hubble/chron.html},
-note = {[online]. 2015 [cit. 2015-04-03]}
-}
-
 
 @Article{Kerslager,
 author = {Milan KERŠLÁGER},
