--- a/protocol/dokumentace.tex
+++ b/protocol/dokumentace.tex
@@ -2,7 +2,7 @@
 
 \usepackage[left=2cm,text={17cm, 24cm}, top=3cm]{geometry}
 \usepackage[czech]{babel}
-\usepackage[latin2]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage{times}
 \begin{document}
 \begin{titlepage}
@@ -38,10 +38,8 @@ semestrální projekt \\
 \section{Úvod}
 Člověk už od pradávna vzhlížel ke hvězdám a~vesmírným tělesům ve snaze je zdokumentovat, zaznamenat jejich pohyb či zajistit si jejich příznivé naklonění. V~posledních letech se však lidstvu díky technologickému pokroku podařilo udělat obrovský skok vpřed v~pozorování a~dokumentování naší galaxie a~vesmíru kolem nás. Díky rozmachu vesmírných programů se podařilo umístit přímo do kosmu speciální dužice a~teleskopy díky nimž jsme opět o~krok blíž k poznání tajů vesmíru. V~tomto semestrálním projektu se zabýváme historií, vlastnostmi a~popisem optických soustav dvou vesmírných teleskopů. Prvním teleskopem je Hubbleův teleskop, který je na oběžné dráze v~provozu již 25 let a~pomohl nám objasnit a~objevit mnoho záhad vesmíru. Druhým popsaným teleskopem je teleskop Jamese Webba, který ještě ve vesmíru není, avšak již existuje jeho model ve skutečné velikosti. Konstrukce finálního teleskopu je již v~plném proudu, aby mohl v~roce 2018 započít svoji misi. 
 
-\cite{wikipediaHubble}
-
 \section{Hubbleův vesmírný dalekohled}
-Hubbleův vesmírný teleskop (známý také pod svou zkratkou HST, či pouze jako Hubble) je ve
+Hubbleův vesmírný teleskop (známý také pod svou zkratkou HST, či pouze jako Hubble) je teleskop, který byl vypuštěn na oběžnou dráhu v roce 1990\cite{nasaHubbleChronology}. 
 \subsection{Historie}
 \subsection{Popis konstrukce}
 \subsection{Optický systém}
