--- a/protocol/dokumentace.bib
+++ b/protocol/dokumentace.bib
@@ -17,9 +17,17 @@
 	note = {[online]. 2015 [cit. 2015-04-03]}
 }
 
+@Article{hubbleSiteServicingMissions,
+	journal = {Servicing Missions},
+	url = {http://hubblesite.org/the\_telescope/team\_hubble/servicing\_missions.php},
+	note = {[online]. 2015 [cit. 2015-04-03]}
+}
 
-
-
+@Article{hubbleUntil2018
+	journal = {Hubble Space Telescope Could Last Until 2018, NASA Says},
+	url = {http://www.space.com/19189-hubble-space-telescope-lifetime-2018.html},
+	note = {[online]. 2015 [cit. 2015-04-03]}
+}
 
 @Book{Saltz,
 author = {Ina SALTZ},
