--- a/protocol/dokumentace.bib
+++ b/protocol/dokumentace.bib
@@ -23,11 +23,34 @@
 	note = {[online]. 2015 [cit. 2015-04-03]}
 }
 
-@Article{hubbleUntil2018
+@Article{hubbleUntil2018,
 	journal = {Hubble Space Telescope Could Last Until 2018, NASA Says},
 	url = {http://www.space.com/19189-hubble-space-telescope-lifetime-2018.html},
 	note = {[online]. 2015 [cit. 2015-04-03]}
 }
+
+@Article{nasaHubbleAccomplishments,
+	journal = {Hubble Accomplishments},
+	url = {https://www.nasa.gov/mission\_pages/hubble/main/accomplishments\_index.html},
+	note = {[online]. 2015 [cit. 2015-04-03]}
+}
+
+@article{LymanSpitzer1990131,
+	title = "Report to project rand: Astronomical advantages of an extra-terrestrial observatory ",
+	journal = "Astronomy Quarterly ",
+	volume = "7",
+	number = "3",
+	pages = "131 - 142",
+	year = "1990",
+	note = "",
+	issn = "0364-9229",
+	doi = "http://dx.doi.org/10.1016/0364-9229(90)90018-V",
+	url = "http://www.sciencedirect.com/science/article/pii/036492299090018V",
+	author = "Jr. Lyman Spitzer"
+}
+
+
+
 
 @Book{Saltz,
 author = {Ina SALTZ},
