--- a/protocol/dokumentace.tex
+++ b/protocol/dokumentace.tex
@@ -41,8 +41,24 @@ semestrální projekt \\
 \section{Hubbleův vesmírný dalekohled}
 Hubbleův vesmírný teleskop (známý také pod svou zkratkou HST, či pouze jako Hubble) je teleskop, který byl vypuštěn na oběžnou dráhu v roce 1990 \cite{nasaHubbleChronology}. Od té doby byly k teleskopu vyslány čtyři servisní mise \cite{hubbleSiteServicingMissions}, které postupně prodlužovaly až do původně očekávaného ukončení činnosti v roce 2015, NASA nyní ovšem tvrdí, že HST by mohl vydržet v provozu do roku 2018 \cite{hubbleUntil2018}, tedy do vypuštění vesmírného teleskopu Jamese Webba.
 
+Díky HST jsme během jeho dvaceti pěti let provozu získali množství informací, které nám umožnily, mimo jiné, přesněji určit stáří vesmíru, pochopit procesy vedoucí k formování planet a rozšířit naše znalosti ohledně černých děr. Tyto informace také vedly k~objevu temné enrgie a~dokonce i~první organické molekuly mimo povrch Země \cite{nasaHubbleAccomplishments}.
 
 \subsection{Historie}
+
+Návrh na konstrukci vesmírného teleskopu vznesl poprvé v roce 1946 ve svém článku \cite{LymanSpitzer1990131}. Jako hlavní výhodu tohoto přístupu uvedl zbaevní se optických efektů Zemské atmosféry, které dosud limitovaly pozorování provedená pozemskými teleskopy.
+
+Následně NASA v roce 1971 utvořila Large Space Telescope Science Steering Group, jejímž cílem bylo studium proveditelnosti vesmírného teleskopu o průměru tři metry. K tomuto projektu byla později v roce 1975 přizvána i European Space Agency. Průměr teleskopu byl zároveň zmenšen na 2,4 metry. 
+
+V roce 1977 byl dokončen původní návrh teleskopu a~NASA přenechává práci na optickém systému společnosti Perkin-Elmer Corporation a~práci na pouzdru společnosti Lockheed Missiles and Space.
+
+Práce na optickém systému a pouzdru byly dokončeny v letech 1984 a 1985.
+
+Teleskop byl 24. dubna roku 1990 vynešen na oběžnou dráhu. Nedlouho poté je objevena, že hlavní zrcadlo teleskopu se vyznačuje sférickou aberací, což mělo za následek rozmazané snímky \cite{nasaHubbleChronology}.
+
+\subsubsection{Servisní mise}
+V roce 1993 proto byla k teleskopu vyslána první servisní mise, jejímž cílem bylo nainstalovat dvě nová zařízení - Wide Field and Planetary Camera 2 (WFPC2), tedy nový CCD optický senzor, a Corrective Optics Space Telescope Axial Replacement (COSTAR), tedy korektivní optika, která měla omezit vliv sférické aberace hlavního zrcadla.
+
+
 \subsection{Popis konstrukce}
 \subsection{Optický systém}
 
@@ -55,7 +71,7 @@ Druhým teleskopem, který v~tomto projektu představíme, je vesmírný telesko
 JWST je plánovaná velká vesmírná observatoř optimalizovaná pro příjem infračerveného vlnového záření, pomocí kterého budou doplněny a~prohloubeny obejvy, které byly uskutečněny Hubbleovým teleskopem.
 Díky větší vlnové délce bude JWST schopen pozorovat formování prvních galaxií při utváření vesmíru a dále bude schopen pozorovat formování galaxií, které jsou ukryré za mračny vesmírného prachu.
 
-Původní název JSWT byl Vesmírný teleskop nové generace (anglicky Next Generation Space Telescope, zkráceně NGST). Přívlastek 'nové generace' získal proto, že JWST bude stavět a pokračovat ve vědním průzkumu, který započal Hubbleův vesmírný teleskop. Oběvy, které byly učiněny Hubbleovým teleskopem, ale i ostatními teleskopy, zapříčinily revoluci v astronomii a vyvstaly nové otázky, na jejichž zodpovězení bylo zapotřebí nových, odlišných a výkonějšších teleskopů. 
+Původní název JSWT byl Vesmírný teleskop nové generace (anglicky Next Generation Space Telescope, zkráceně NGST). Přívlastek "nové generace" získal proto, že JWST bude stavět a pokračovat ve vědním průzkumu, který započal Hubbleův vesmírný teleskop. Objevy, které byly učiněny Hubbleovým teleskopem, ale i ostatními teleskopy, zapříčinily revoluci v astronomii a vyvstaly nové otázky, na jejichž zodpovězení bylo zapotřebí nových, odlišných a výkonějšších teleskopů. 
 JWST je také teleskopem nové generace i~po stránce technologické a~to díky použití nových technologií jako například odlehčeného, rozvinovacího primárního zrcadla, které bude určovat směr pro budoucí mise.
 Vesmírný teleskop nové generace byl 10. září 2002 pojmenován po Jamesi E. Webbovi.
  
